# nuc

./: CMakeLists.txt  CMakeLists.txt.old  README.md  manifest.xml  package.xml  play.sh
experiments/: 1-patch-result  lower_bound.cpp  multi-patch-result  param.yaml  ploteverything.sh  plotratio.sh  result-table.sh  results  run.sh
experiments/real_data/: gp  real_plot.sh  realdata
experiments_lm/: once.sh  param.yaml  ploteverything.sh  result-table.sh  results  run.sh
include/: BreadthFirstStrategy.h  BudgetedStrategy.h  CNode.h  CompoundTarget.h  DepthFirstStrategy.h  GNode.h  GraphComponents.h  HilbertOptimization.h  HilbertStrategy.h  HuskyInterface.h  IntServerInterface.h  InterestingnessSensor.h  Knapsack.h  LawnmowerStrategy.h  MAV.h  NUC.h  NUCParam.h  PathOptimization.h  PlayLog.h  ScalarField.h  SearchCoverageStrategy.h  ShortCutStrategy.h  SuperPixelFeatures.h  TSP.h  TargetPolygon.h  TargetTour.h  TestStrategy.h  Trajectory.h  TraversalStrategy.h  slic.h
launch/: NUC.launch  batchrun.launch  batchrun_param.yaml  image_publisher.launch  real_param.yaml  sim.launch  sim_param.yaml
log/: clean.sh  savelog.sh
prob_experiments/: all_table.sh  c1  c2  c3  c4  c5  c6  c7  fn1  fn2  fn3  fn4  fn5  fn6  fn7  fp1  fp2  fp3  fp4  fp5  fp6  fp7  newc1  newc2  newc3  newc4  newc5  newc6  newfn1  newfn2  newfn3  newfn4  newfn5  newfn6  newfp1  newfp2  newfp3  newfp4  newfp5  newfp6  (+26 more)
src/: BreadthFirstStrategy.cpp  BudgetedStrategy.cpp  CNode.cpp  CompoundTarget.cpp  DepthFirstStrategy.cpp  GNode.cpp  GraphComponents.cpp  HilbertOptimization.cpp  HilbertStrategy.cpp  HuskyInterface.cpp  ImagePublisher.cpp  InterestingnessSensor.cpp  LawnmowerStrategy.cpp  MAV.cpp  NUC.cpp  NUCParam.cpp  NUC_node.cpp  PathOptimization.cpp  PlayLog.cpp  ScalarField.cpp  SearchCoverageStrategy.cpp  ShortCutStrategy.cpp  SuperPixelFeatures.cpp  TSP.cpp  TargetPolygon.cpp  TargetTour.cpp  TestStrategy.cpp  Trajectory.cpp  slic.cpp
