<package>
  <name>nuc</name>
  <version>1.1.0</version>
  <description>
    Non-Uniform Coverage Planner 
  </description>
  <maintainer email="asadat@autonomylab.org">Seyed Abbas Sadat</maintainer>
  <license></license>
  <author email="asadat@autonomylab.org">Seyed Abbas Sadat</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pelican_ctrl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pelican_ctrl</run_depend>
  <run_depend>message_generation</run_depend>
 
</package>
